--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # production
 /build
+build.zip
 
 # misc
 .DS_Store
@@ -19,3 +20,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+**/.idea/**/*.iws
+**/.idea/workspace.xml
+**/.idea/tasks.xml
